--- a/index.html
+++ b/index.html
@@ -5,9 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <script defer src="app.js"></script>
     <title>Adncanced Track</title>
 </head>
 <body>
     <h1>Advanced Track</h1>
+    <canvas id="chart1"></canvas>
 </body>
 </html>
