--- a/index.html
+++ b/index.html
@@ -10,7 +10,58 @@
     <title>Adncanced Track</title>
 </head>
 <body>
-    <h1>Advanced Track</h1>
-    <canvas id="chart1"></canvas>
+    <div id="center">
+        <h1 id="title">Team Report Title</h1>
+
+        <div id="team">
+            <h2 id="team-title">Team</h2>
+            <div id="member-list">
+                <div class="member" onclick="location.href = 'https://www.linkedin.com/in/jonathanlo411/'">
+                    <div class="pfp-wrapper">
+                        <img src="https://cdn.discordapp.com/attachments/942218891952783421/962510747542364230/headshot_sea_pfp.jpg">
+                    </div>
+                    <h4 class="member-name">Jonathan Lo</h4>
+                    <h6 class="member-desc">Data Science</h6>
+                </div>
+                <div class="member" onclick="location.href = 'https://www.linkedin.com/in/eric3wang/'">
+                    <div class="pfp-wrapper">
+                        <img src="https://cdn.discordapp.com/attachments/942218891952783421/962517414862549102/IMG_8957_1_2.jpg">
+                    </div>
+                    <h4 class="member-name">Eric Wang</h4>
+                    <h6 class="member-desc">Data Science</h6>
+                </div>
+                <div class="member" onclick="location.href = 'https://www.linkedin.com/in/justin-liang-146aa219a/'">
+                    <div class="pfp-wrapper">
+                        <img src="https://cdn.discordapp.com/attachments/935392041641336832/962516870114725888/unknown.png">
+                    </div>
+                    <h4 class="member-name">Justin Liang</h4>
+                    <h6 class="member-desc">Biochemistry</h6>
+                </div>
+            </div>
+        </div>
+        
+
+        <div id="process">
+            <h2 id="process-title">Process</h2>
+            <div class="step">
+                <h3 class="heading">0. Introduction</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure, eius. Minima voluptatum optio rem. Dignissimos commodi omnis nam dicta nemo consequuntur eos hic sint possimus, ratione quaerat ducimus autem ipsa quam mollitia quas quod porro aspernatur dolores unde explicabo. Aperiam omnis eos praesentium ea pariatur porro quis maxime perferendis minima quos iste quidem tempora inventore mollitia, illo quaerat nemo doloremque at nobis alias saepe non recusandae voluptatum? Incidunt aut minima labore aspernatur blanditiis, sapiente a molestias amet, odit beatae fuga maiores reiciendis velit aliquam fugiat laborum eaque cupiditate est. Ea a, nemo at laborum magnam debitis quaerat ipsam minima eaque!</p>
+            </div>
+            <div class="step">
+                <h3 class="heading">1. Data Cleaning/Preprocessing</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure, eius. Minima voluptatum optio rem. Dignissimos commodi omnis nam dicta nemo consequuntur eos hic sint possimus, ratione quaerat ducimus autem ipsa quam mollitia quas quod porro aspernatur dolores unde explicabo. Aperiam omnis eos praesentium ea pariatur porro quis maxime perferendis minima quos iste quidem tempora inventore mollitia, illo quaerat nemo doloremque at nobis alias saepe non recusandae voluptatum? Incidunt aut minima labore aspernatur blanditiis, sapiente a molestias amet, odit beatae fuga maiores reiciendis velit aliquam fugiat laborum eaque cupiditate est. Ea a, nemo at laborum magnam debitis quaerat ipsam minima eaque!</p>
+            </div>
+            <div class="step">
+                <h3 class="heading">2. Visualizations</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure, eius. Minima voluptatum optio rem. Dignissimos commodi omnis nam dicta nemo consequuntur eos hic sint possimus, ratione quaerat ducimus autem ipsa quam mollitia quas quod porro aspernatur dolores unde explicabo. Aperiam omnis eos praesentium ea pariatur porro quis maxime perferendis minima quos iste quidem tempora inventore mollitia, illo quaerat nemo doloremque at nobis alias saepe non recusandae voluptatum? Incidunt aut minima labore aspernatur blanditiis, sapiente a molestias amet, odit beatae fuga maiores reiciendis velit aliquam fugiat laborum eaque cupiditate est. Ea a, nemo at laborum magnam debitis quaerat ipsam minima eaque!</p>
+            </div>
+            <div class="step">
+                <h3 class="heading">3. Analysis/Results</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure, eius. Minima voluptatum optio rem. Dignissimos commodi omnis nam dicta nemo consequuntur eos hic sint possimus, ratione quaerat ducimus autem ipsa quam mollitia quas quod porro aspernatur dolores unde explicabo. Aperiam omnis eos praesentium ea pariatur porro quis maxime perferendis minima quos iste quidem tempora inventore mollitia, illo quaerat nemo doloremque at nobis alias saepe non recusandae voluptatum? Incidunt aut minima labore aspernatur blanditiis, sapiente a molestias amet, odit beatae fuga maiores reiciendis velit aliquam fugiat laborum eaque cupiditate est. Ea a, nemo at laborum magnam debitis quaerat ipsam minima eaque!</p>
+            </div>
+        </div>   
+
+    </div>
+    <!-- <canvas id="chart1"></canvas> -->
 </body>
 </html>
