--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script defer src="app.js"></script>
-    <title>Team Name Title</title>
+    <title>Bofa Bros - DataHacks 2022</title>
 </head>
 <body>
     <div id="center">
