--- a/index.html
+++ b/index.html
@@ -10,32 +10,33 @@
     <title>Bofa Bros - DataHacks 2022</title>
 </head>
 <body>
+    <h1 id="title">DataHacks 2022</h1>
+    <div id="body-page">
     <div id="center">
-        <h1 id="title">DataHacks 2022</h1>
 
         <div id="team">
             <h2 id="team-title">Team Bofa Bros</h2>
             <p id="team-desc">
                 Returning for a second year after their honorable mention from Datahacks 2021, Team Wild Rifters, now renamed to Team Bofa Bros, composed of Jonathan Lo, Eric Wang, and Justin Liang, hope to build upon their previous experiences to showcase a development of knowledge in this year’s Datahacks 2022 Advanced Path. With a newfound appreciation for the ability of data to help change the understanding of the world around us, Team Bofa Bros hopes to use this hackathon as the backbone to create something much greater.<br><br>
-                We are vengeance. <br><br>
+                We are vengeance.<br><br>
                 We're back to destroy the enemy nexus this time.
             </p>
             <div id="member-list">
-                <div class="member" onclick="location.href = 'https://www.linkedin.com/in/jonathanlo411/'">
+                <div class="member" style="--animation-order: 1;" onclick="location.href = 'https://www.linkedin.com/in/jonathanlo411/'">
                     <div class="pfp-wrapper">
                         <img src="https://cdn.discordapp.com/attachments/942218891952783421/962510747542364230/headshot_sea_pfp.jpg">
                     </div>
                     <h4 class="member-name">Jonathan Lo</h4>
                     <h6 class="member-desc">Data Science</h6>
                 </div>
-                <div class="member" onclick="location.href = 'https://www.linkedin.com/in/eric3wang/'">
+                <div class="member" style="--animation-order: 2;" onclick="location.href = 'https://www.linkedin.com/in/eric3wang/'">
                     <div class="pfp-wrapper">
                         <img src="https://cdn.discordapp.com/attachments/942218891952783421/962517414862549102/IMG_8957_1_2.jpg">
                     </div>
                     <h4 class="member-name">Eric Wang</h4>
                     <h6 class="member-desc">Data Science</h6>
                 </div>
-                <div class="member" onclick="location.href = 'https://www.linkedin.com/in/justin-liang-146aa219a/'">
+                <div class="member" style="--animation-order: 3;" onclick="location.href = 'https://www.linkedin.com/in/justin-liang-146aa219a/'">
                     <div class="pfp-wrapper">
                         <img src="https://cdn.discordapp.com/attachments/935392041641336832/962516870114725888/unknown.png">
                     </div>
@@ -50,7 +51,7 @@
             <h2 id="process-title">Process</h2>
             <div class="step">
                 <h3 class="heading">0. Introduction</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure, eius. Minima voluptatum optio rem. Dignissimos commodi omnis nam dicta nemo consequuntur eos hic sint possimus, ratione quaerat ducimus autem ipsa quam mollitia quas quod porro aspernatur dolores unde explicabo. Aperiam omnis eos praesentium ea pariatur porro quis maxime perferendis minima quos iste quidem tempora inventore mollitia, illo quaerat nemo doloremque at nobis alias saepe non recusandae voluptatum? Incidunt aut minima labore aspernatur blanditiis, sapiente a molestias amet, odit beatae fuga maiores reiciendis velit aliquam fugiat laborum eaque cupiditate est. Ea a, nemo at laborum magnam debitis quaerat ipsam minima eaque!</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem non asperiores delectus, pariatur repellat ad odit, nemo nisi vero quos obcaecati eum eveniet laborum corrupti cum libero voluptatum facere dolores sint? Illum quas sint incidunt recusandae beatae non dignissimos reprehenderit ipsam amet cupiditate blanditiis exercitationem provident explicabo maiores, ab animi voluptatibus facilis perspiciatis quos culpa laborum magni magnam. In tempore culpa quo, explicabo commodi ex tempora a nesciunt, molestias sed saepe animi excepturi veniam quam, est illum similique enim laboriosam deserunt eius omnis sunt id incidunt. Autem deserunt expedita, reiciendis repudiandae alias molestiae aperiam cum corporis aliquam accusamus, a ea?</p>
             </div>
             <div class="step">
                 <h3 class="heading">1. Data Cleaning/Preprocessing</h3>
@@ -105,6 +106,6 @@ ax.get_legend().set_title("Users")
     <footer>
         <h5>2022 Bofa Bros, Inc.</h5>
     </footer>
-    <!-- <canvas id="chart1"></canvas> -->
+    </div>
 </body>
 </html>
