serving static  locally

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/svg+xml" href="favicon.svg">
-    <link rel="icon" type="image/png" href="favicon.png">
+    <link rel="icon" type="image/svg+xml" href="data/favicon.svg">
+    <link rel="icon" type="image/png" href="data/favicon.png">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <script defer src="https://cdn.jsdelivr.net/npm/chart.js"></script>
@@ -33,21 +33,21 @@
             <div id="member-list">
                 <div class="member" style="--animation-order: 1;" onclick="location.href = 'https://www.linkedin.com/in/jonathanlo411/'">
                     <div class="pfp-wrapper">
-                        <img src="https://cdn.discordapp.com/attachments/942218891952783421/962510747542364230/headshot_sea_pfp.jpg">
+                        <img src="data/jlo.jpg">
                     </div>
                     <h4 class="member-name">Jonathan Lo</h4>
                     <h6 class="member-desc">Data Science</h6>
                 </div>
                 <div class="member" style="--animation-order: 2;" onclick="location.href = 'https://www.linkedin.com/in/eric3wang/'">
                     <div class="pfp-wrapper">
-                        <img src="https://cdn.discordapp.com/attachments/942218891952783421/962517414862549102/IMG_8957_1_2.jpg">
+                        <img src="data/e3w.jpg">
                     </div>
                     <h4 class="member-name">Eric Wang</h4>
                     <h6 class="member-desc">Data Science</h6>
                 </div>
                 <div class="member" style="--animation-order: 3;" onclick="location.href = 'https://www.linkedin.com/in/justin-liang-146aa219a/'">
                     <div class="pfp-wrapper">
-                        <img src="https://cdn.discordapp.com/attachments/935392041641336832/962516870114725888/unknown.png">
+                        <img src="data/jli.png">
                     </div>
                     <h4 class="member-name">Justin Liang</h4>
                     <h6 class="member-desc">Biochemistry</h6>
