--- a/index.html
+++ b/index.html
@@ -147,5 +147,6 @@ ax.get_legend().set_title("Users")
         </div>
     </div>
 
+    <!-- <iframe id="igraph" scrolling="no" style="border:none;" seamless="seamless" src="" height="525" width="100%"></iframe> -->
 </body>
 </html>
