plotly visualizations generated

--- a/index.html
+++ b/index.html
@@ -69,6 +69,12 @@
             <div class="step" id="sec2">
                 <h3 class="heading">2. Visualizations</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure, eius. Minima voluptatum optio rem. Dignissimos commodi omnis nam dicta nemo consequuntur eos hic sint possimus, ratione quaerat ducimus autem ipsa quam mollitia quas quod porro aspernatur dolores unde explicabo. Aperiam omnis eos praesentium ea.</p>
+                <iframe id="igraph" scrolling="no" style="border:none;" seamless="seamless" src="https://chart-studio.plotly.com/~jonathanlo411/1/#/" height="525" width="100%"></iframe>
+                <p>Pariatur porro quis maxime perferendis minima quos iste quidem tempora inventore mollitia, illo quaerat nemo doloremque at nobis alias saepe non recusandae voluptatum? Incidunt aut minima labore aspernatur blanditiis, sapiente a molestias amet, odit beatae fuga maiores reiciendis velit aliquam fugiat laborum eaque cupiditate est. Ea a, nemo at laborum magnam debitis quaerat ipsam minima eaque!</p>
+            </div>
+            <div class="step" id="sec3">
+                <h3 class="heading">3. Analysis/Results</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure, eius. Minima voluptatum optio rem. Dignissimos commodi omnis nam dicta nemo consequuntur eos hic sint possimus, ratione quaerat ducimus autem ipsa quam mollitia quas quod porro aspernatur dolores unde explicabo. Aperiam omnis eos praesentium ea pariatur porro quis maxime perferendis minima quos iste quidem tempora inventore mollitia, illo quaerat nemo doloremque at nobis alias saepe non recusandae voluptatum? Incidunt aut minima labore aspernatur blanditiis, sapiente a molestias amet, odit beatae fuga maiores reiciendis velit aliquam fugiat laborum eaque cupiditate est. Ea a, nemo at laborum magnam debitis quaerat ipsam minima eaque!</p>
                 <pre><code>
 # Sample Code Block
 scheme_one = mc.FisherJenks(merged['num_users'], k=7)
@@ -94,11 +100,7 @@ gplt.pointplot(
 plt.title("ASes and Users by Country")
 ax.get_legend().set_title("Users")
                 </code></pre>
-                <p>Pariatur porro quis maxime perferendis minima quos iste quidem tempora inventore mollitia, illo quaerat nemo doloremque at nobis alias saepe non recusandae voluptatum? Incidunt aut minima labore aspernatur blanditiis, sapiente a molestias amet, odit beatae fuga maiores reiciendis velit aliquam fugiat laborum eaque cupiditate est. Ea a, nemo at laborum magnam debitis quaerat ipsam minima eaque!</p>
-            </div>
-            <div class="step" id="sec3">
-                <h3 class="heading">3. Analysis/Results</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure, eius. Minima voluptatum optio rem. Dignissimos commodi omnis nam dicta nemo consequuntur eos hic sint possimus, ratione quaerat ducimus autem ipsa quam mollitia quas quod porro aspernatur dolores unde explicabo. Aperiam omnis eos praesentium ea pariatur porro quis maxime perferendis minima quos iste quidem tempora inventore mollitia, illo quaerat nemo doloremque at nobis alias saepe non recusandae voluptatum? Incidunt aut minima labore aspernatur blanditiis, sapiente a molestias amet, odit beatae fuga maiores reiciendis velit aliquam fugiat laborum eaque cupiditate est. Ea a, nemo at laborum magnam debitis quaerat ipsam minima eaque!</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt nulla, eaque commodi, exercitationem dolores deserunt laudantium laborum officia voluptatem at possimus animi a unde aspernatur quasi? Earum veniam unde eveniet suscipit voluptate error maxime aut, minus sed fugiat dignissimos distinctio soluta quae. Totam, animi qui! Atque neque quae eligendi optio ratione nulla tempore, earum quibusdam voluptatem eius obcaecati sapiente eaque.</p>
             </div>
             <div class="step" id="sec4">
                 <h3 class="heading">4. Conclusion</h3>
@@ -146,7 +148,5 @@ ax.get_legend().set_title("Users")
             <h2>Future Improvements</h2>
         </div>
     </div>
-
-    <!-- <iframe id="igraph" scrolling="no" style="border:none;" seamless="seamless" src="" height="525" width="100%"></iframe> -->
 </body>
 </html>
